k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nuistagram
  labels:
    app.kubernetes.io/name: nuistagram
